# turtlebot3_autonomy

./: .gitignore
install/: local_setup.sh  setup.sh
install/autonomous_mobile_robot/include/autonomous_mobile_robot/: robot_node.hpp
install/autonomous_mobile_robot/include/autonomous_mobile_robot/common/: parameters.hpp  types.hpp
install/autonomous_mobile_robot/include/autonomous_mobile_robot/controller/: controller.hpp
install/autonomous_mobile_robot/include/autonomous_mobile_robot/navigation/: navigation.hpp
install/autonomous_mobile_robot/include/autonomous_mobile_robot/perception/: perception.hpp
install/autonomous_mobile_robot/include/autonomous_mobile_robot/state_machine/: state_machine.hpp
install/autonomous_mobile_robot/lib/autonomous_mobile_robot/: robot_node
install/autonomous_mobile_robot/share/ament_index/resource_index/package_run_dependencies/: autonomous_mobile_robot
install/autonomous_mobile_robot/share/ament_index/resource_index/parent_prefix_path/: autonomous_mobile_robot
install/autonomous_mobile_robot/share/autonomous_mobile_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autonomous_mobile_robot/share/autonomous_mobile_robot/cmake/: autonomous_mobile_robotConfig-version.cmake  autonomous_mobile_robotConfig.cmake
install/autonomous_mobile_robot/share/autonomous_mobile_robot/config/: robot.yaml
install/autonomous_mobile_robot/share/autonomous_mobile_robot/environment/: ament_prefix_path.dsv  path.dsv
install/autonomous_mobile_robot/share/autonomous_mobile_robot/launch/: autonomous_mobile_robot.launch.py
install/nav_goal_sender/lib/nav_goal_sender/: nav_goal_sender
install/nav_goal_sender/share/ament_index/resource_index/package_run_dependencies/: nav_goal_sender
install/nav_goal_sender/share/ament_index/resource_index/parent_prefix_path/: nav_goal_sender
install/nav_goal_sender/share/nav_goal_sender/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nav_goal_sender/share/nav_goal_sender/cmake/: nav_goal_senderConfig-version.cmake  nav_goal_senderConfig.cmake
install/nav_goal_sender/share/nav_goal_sender/environment/: ament_prefix_path.dsv  path.dsv
install/obstacle_avoidance/lib/obstacle_avoidance/: obstacle_avoidance
install/obstacle_avoidance/share/obstacle_avoidance/: package.ps1  package.sh  package.xml
log/: latest_build
maps/: my_map.pgm  my_map.yaml
src/: .gitignore
src/autonomous_mobile_robot/: .gitignore  CMakeLists.txt  package.xml
src/autonomous_mobile_robot/include/autonomous_mobile_robot/: robot_node.hpp
src/autonomous_mobile_robot/src/: main.cpp  robot_node.cpp
src/nav_goal_sender/: CMakeLists.txt
src/nav_goal_sender/src/: nav_goal_sender.cpp
src/obstacle_avoidance/: package.xml  setup.py  setup.py.save
src/obstacle_avoidance/obstacle_avoidance/: obstacle_avoidance_node.py
